Revert "Merge branch 'master' into dev"
This reverts commit ac1b44a25a815168ccd8b7fb8ffb31a40c78c93a, reversing
changes made to 0d00dcba686d5436854ec9857bfc37cf052b1fe4.

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header">
-  <div class="menu-close _anim-items container">
+  <div class="menu-close container">
     <a href="#">
-      <svg class="mobile_logo _anim-items">
+      <svg class="mobile_logo">
         <use href="./images/sprite.svg#logo-desktop"></use>
       </svg>
     </a>
@@ -18,10 +18,8 @@
       </ul>
     </nav>
     <a class="header-button" href="#">консультация по телефону</a>
-
-    <button class="nav-menu-btn" type="button" data-modal-open>
-      <svg class="svg-button">
-
+    <button class="header-svg-button" type="button" data-modal-open>
+      <svg class="nav-menu-btn">
         <use href="./images/sprite.svg#nav-menu"></use>
       </svg>
     </button>
@@ -33,9 +31,8 @@
           <use href="./images/sprite.svg#mobile_logo"></use>
         </svg>
       </a>
-      <button class="menu-close-btn" type="button" data-modal-close>
-        <svg class="svg-button">
-
+      <button class="header-svg-button" type="button" data-modal-close>
+        <svg class="menu-close-btn">
           <use href="./images/sprite.svg#menu_closed"></use>
         </svg>
       </button>
