--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -1,6 +1,6 @@
 <section class="feedback">
   <div class="container">
-    <h1 class="feedback-title">Отзывы выпускников</h1>
+    <h1 id="feedback" class="feedback-title">Отзывы выпускников</h1>
     <div class="feedback-for">
       <div class="feedback-list-item">
         <div class="wrap-for-pic">
