--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="footer-wrapper">
     <div class="container">
       <div class="footer-text-wrapper">
-        <h2 class="footer-title">
+        <h2 id="contacts" class="footer-title">
           Регистрация на
           <span class="footer-accent">бесплатную</span> телефонную
           <span class="footer-accent">консультацию</span> по нюансам ЗНО по
