--- a/src/partials/methods.html
+++ b/src/partials/methods.html
@@ -1,6 +1,6 @@
 <section class="methods">
   <div class="container">
-    <h1 class="methods-title">Как мы это делаем</h1>
+    <h1 id="methods" class="methods-title">Как мы это делаем</h1>
 
     <ul class="methods-list">
       <li class="methods-list-item">
