--- a/src/partials/programs.html
+++ b/src/partials/programs.html
@@ -1,139 +1,151 @@
 <section class="programs">
-    <div class="programs-title-wrapper">
-        <h2 class="programs-title">Наша программа</h2>
+  <div class="programs-title-wrapper">
+    <h2 id="programs" class="programs-title">Наша программа</h2>
+  </div>
+  <div class="programs-container container">
+    <div class="programs-list-wrapper">
+      <ul class="programs-list">
+        <li class="programs-list-item">
+          <h3 class="programs-list-subtitle">1 семестр</h3>
+          <ul class="term-list">
+            <li class="term-list-item">
+              <p class="term-list-text">Grammar</p>
+              <ul class="term-desc-list">
+                <li class="term-desc-item">Nouns & Articles</li>
+                <li class="term-desc-item">Adjectives & Adverb</li>
+              </ul>
+            </li>
+            <li class="term-list-item">
+              <p class="term-list-text">Vocabulary</p>
+              <ul class="term-desc-list">
+                <li class="term-desc-item">Family & Relations</li>
+                <li class="term-desc-item">People & Society</li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+        <li class="programs-list-item">
+          <h3 class="programs-list-subtitle">2 семестр</h3>
+          <ul class="term-list">
+            <li class="term-list-item">
+              <p class="term-list-text">Grammar</p>
+              <ul class="term-desc-list">
+                <li class="term-desc-item">Pronouns</li>
+                <li class="term-desc-item">Active Voice</li>
+                <li class="term-desc-item">Passive Voice</li>
+              </ul>
+            </li>
+            <li class="term-list-item">
+              <p class="term-list-text">Vocabulary</p>
+              <ul class="term-desc-list">
+                <li class="term-desc-item">Home</li>
+                <li class="term-desc-item">School</li>
+                <li class="term-desc-item">Work</li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+        <li class="programs-list-item">
+          <h3 class="programs-list-subtitle">3 семестр</h3>
+          <ul class="term-list">
+            <li class="term-list-item">
+              <p class="term-list-text">Grammar</p>
+              <ul class="term-desc-list">
+                <li class="term-desc-item">Modal verbs</li>
+                <li class="term-desc-item">Infinitive</li>
+                <li class="term-desc-item">Gerund</li>
+                <li class="term-desc-item">Participle: 1, 2</li>
+              </ul>
+            </li>
+            <li class="term-list-item">
+              <p class="term-list-text">Vocabulary</p>
+              <ul class="term-desc-list">
+                <li class="term-desc-item">Travel & Tourism</li>
+                <li class="term-desc-item">Culture & Free Time</li>
+                <li class="term-desc-item">Sport</li>
+              </ul>
+            </li>
+            <li class="term-list-item">
+              <p class="term-list-text">Writing</p>
+              <p class="term-desc-item">Informal Letter</p>
+            </li>
+          </ul>
+        </li>
+        <li class="programs-list-item">
+          <h3 class="programs-list-subtitle">4 семестр</h3>
+          <ul class="term-list">
+            <li class="term-list-item">
+              <p class="term-list-text">Grammar</p>
+              <ul class="term-desc-list">
+                <li class="term-desc-item">Clauses: Conditional and Wishes</li>
+                <li class="term-desc-item">Direct / Reported speech</li>
+                <li class="term-desc-item">Preposition</li>
+                <li class="term-desc-item">Conjunction</li>
+                <li class="term-desc-item">Numeral</li>
+              </ul>
+            </li>
+            <li class="term-list-item">
+              <p class="term-list-text">Vocabulary</p>
+              <ul class="term-desc-list">
+                <li class="term-desc-item">Healthy Living</li>
+                <li class="term-desc-item">Nature & Environment</li>
+                <li class="term-desc-item">Money</li>
+              </ul>
+            </li>
+            <li class="term-list-item">
+              <p class="term-list-text">Writing</p>
+              <p class="term-desc-item">Formal Letter</p>
+            </li>
+          </ul>
+        </li>
+        <li class="programs-list-item">
+          <h3 class="programs-list-subtitle">5 семестр</h3>
+          <p class="term-list-text"></p>
+          <ul class="term-list">
+            <li class="term-desc-item">Revision</li>
+            <li class="term-desc-item">Tests</li>
+          </ul>
+        </li>
+      </ul>
     </div>
-    <div class="programs-container container">
-        <div class="programs-list-wrapper">
-        <ul class="programs-list">
-            <li class="programs-list-item"><h3 class="programs-list-subtitle">1 семестр</h3>
-                <ul class="term-list">
-                    <li class="term-list-item"><p class="term-list-text">Grammar</p>
-                        <ul class="term-desc-list">
-                            <li class="term-desc-item">Nouns & Articles</li>
-                            <li class="term-desc-item">Adjectives & Adverb</li>
-                        </ul>
-                    </li>
-                    <li class="term-list-item"><p class="term-list-text">Vocabulary</p>
-                        <ul class="term-desc-list">
-                            <li class="term-desc-item">Family & Relations</li>
-                            <li class="term-desc-item">People & Society</li>
-                        </ul>
-                    </li>
-                </ul>
-            </li>
-            <li class="programs-list-item"><h3 class="programs-list-subtitle">2 семестр</h3> 
-                <ul class="term-list">
-                    <li class="term-list-item"><p class="term-list-text">Grammar</p>
-                        <ul class="term-desc-list">
-                            <li class="term-desc-item">Pronouns</li>
-                            <li class="term-desc-item">Active Voice</li>
-                            <li class="term-desc-item">Passive Voice</li>
-                        </ul>
-                    </li> 
-                    <li class="term-list-item"><p class="term-list-text">Vocabulary</p>
-                        <ul class="term-desc-list">
-                            <li class="term-desc-item">Home</li>
-                            <li class="term-desc-item">School</li>
-                            <li class="term-desc-item">Work</li>
-                        </ul>
-                    </li>
-                </ul>
-            </li>
-            <li class="programs-list-item"><h3 class="programs-list-subtitle">3 семестр</h3>
-                <ul class="term-list">
-                    <li class="term-list-item"><p class="term-list-text">Grammar</p>
-                        <ul class="term-desc-list">
-                            <li class="term-desc-item">Modal verbs</li>
-                            <li class="term-desc-item">Infinitive</li>
-                            <li class="term-desc-item">Gerund</li>
-                            <li class="term-desc-item">Participle: 1, 2</li>
-                        </ul>
-                    </li>
-                    <li class="term-list-item"><p class="term-list-text">Vocabulary</p>
-                        <ul class="term-desc-list">
-                            <li class="term-desc-item">Travel & Tourism</li>
-                            <li class="term-desc-item">Culture & Free Time</li>
-                            <li class="term-desc-item">Sport</li>
-                        </ul>
-                    </li>
-                    <li class="term-list-item"><p class="term-list-text">Writing</p>
-                        <p class="term-desc-item">Informal Letter</p>
-                    </li>
-                </ul>
-            </li>
-            <li class="programs-list-item"><h3 class="programs-list-subtitle">4 семестр</h3>
-                <ul class="term-list">
-                    <li class="term-list-item"><p class="term-list-text">Grammar</p>
-                        <ul class="term-desc-list">
-                            <li class="term-desc-item">Clauses: Conditional and Wishes</li>
-                            <li class="term-desc-item">Direct / Reported speech</li>
-                            <li class="term-desc-item">Preposition</li>
-                            <li class="term-desc-item">Conjunction</li>
-                            <li class="term-desc-item">Numeral</li>
-                        </ul>
-                    </li>
-                    <li class="term-list-item"><p class="term-list-text">Vocabulary</p>
-                        <ul class="term-desc-list">
-                            <li class="term-desc-item">Healthy Living</li>
-                            <li class="term-desc-item">Nature & Environment</li>
-                            <li class="term-desc-item">Money</li>
-                        </ul>
-                    </li>
-                    <li class="term-list-item"><p class="term-list-text">Writing</p>
-                        <p class="term-desc-item">Formal Letter</p>
-                    </li>
-                </ul>
-            </li>
-            <li class="programs-list-item"><h3 class="programs-list-subtitle">5 семестр</h3>
-                <p class="term-list-text"> </p>
-                <ul class="term-list">
-                    <li class="term-desc-item">Revision</li>
-                    <li class="term-desc-item">Tests</li>
-                </ul>
-            </li>
+  </div>
+  <section class="choose">
+    <div class="container">
+      <h3 class="choose-title">Почему нас выбирают</h3>
+      <div class="choose-conteiner">
+        <ul class="choose-list">
+          <li class="choose-list-item">
+            <p class="choose-item-title accent-line-choose">
+              Обучение в малых командах
+            </p>
+          </li>
+          <li class="choose-list-item">
+            <p class="choose-item-title accent-line-choose">
+              Визуализированные конспекты
+            </p>
+          </li>
+          <li class="choose-list-item">
+            <p class="choose-item-title accent-line-choose">
+              Каждое занятие имеет цель и конкретный результат
+            </p>
+          </li>
+          <li class="choose-list-item">
+            <p class="choose-item-title accent-line-choose">
+              Ревльные результаты преподавателя
+            </p>
+          </li>
+          <li class="choose-list-item">
+            <p class="choose-item-title accent-line-choose">
+              Прогамма курса соответствует требованиям МОН Украины
+            </p>
+          </li>
+          <li class="choose-list-item">
+            <p class="choose-item-title accent-line-choose">
+              Набор команд по уровням знаний
+            </p>
+          </li>
         </ul>
-        </div>
+      </div>
     </div>
-    <section class="choose">
-        <div class="container">
-            <h3 class="choose-title">
-                Почему нас выбирают
-            </h3>
-            <div class="choose-conteiner">
-                <ul class="choose-list">
-                    <li class="choose-list-item">
-                        <p class="choose-item-title accent-line-choose">
-                            Обучение в малых командах
-                        </p>
-                    </li>
-                    <li class="choose-list-item">
-                        <p class="choose-item-title accent-line-choose">
-                            Визуализированные конспекты
-                        </p>
-                    </li>
-                    <li class="choose-list-item">
-                        <p class="choose-item-title accent-line-choose">
-                            Каждое занятие имеет цель и конкретный результат
-                        </p>
-                    </li>
-                    <li class="choose-list-item">
-                        <p class="choose-item-title accent-line-choose">
-                            Ревльные результаты преподавателя
-                        </p>
-                    </li>
-                    <li class="choose-list-item">
-                        <p class="choose-item-title accent-line-choose">
-                            Прогамма курса соответствует требованиям МОН Украины
-                        </p>
-                    </li>
-                    <li class="choose-list-item">
-                        <p class="choose-item-title accent-line-choose">
-                            Набор команд по уровням знаний
-                        </p>
-                    </li>
-                </ul>
-            </div>
-    
-        </div>
-    </section>
+  </section>
 </section>
