--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,25 +8,20 @@
     <nav class="nav">
       <ul class="nav-list">
         <li class="nav-list-item">
-          <a class="nav-link" href="#programs">Программы обучения</a>
+          <a class="nav-link" href="#">Программы обучения</a>
         </li>
+        <li class="nav-list-item"><a class="nav-link" href="#">О нас</a></li>
         <li class="nav-list-item">
-          <a class="nav-link" href="#feedback">О нас</a>
+          <a class="nav-link" href="#">Варианты обучения</a>
         </li>
-        <li class="nav-list-item">
-          <a class="nav-link" href="#methods">Варианты обучения</a>
-        </li>
-        <li class="nav-list-item">
-          <a class="nav-link" href="#contacts">Контакты</a>
-        </li>
+        <li class="nav-list-item"><a class="nav-link" href="#">Контакты</a></li>
       </ul>
     </nav>
-    <a class="header-button" href="tel:+38(000)0000000 "
-      >консультация по телефону</a
-    >
+    <a class="header-button" href="#">консультация по телефону</a>
 
     <button class="nav-menu-btn" type="button" data-modal-open>
       <svg class="svg-button">
+
         <use href="./images/sprite.svg#nav-menu"></use>
       </svg>
     </button>
@@ -40,6 +35,7 @@
       </a>
       <button class="menu-close-btn" type="button" data-modal-close>
         <svg class="svg-button">
+
           <use href="./images/sprite.svg#menu_closed"></use>
         </svg>
       </button>
@@ -47,21 +43,15 @@
     <nav class="menu-nav">
       <ul class="nav-list">
         <li class="nav-list-item">
-          <a class="nav-link" href="#programs">Программы обучения</a>
+          <a class="nav-link" href="#">Программы обучения</a>
         </li>
+        <li class="nav-list-item"><a class="nav-link" href="#">О нас</a></li>
         <li class="nav-list-item">
-          <a class="nav-link" href="#feedback">О нас</a>
+          <a class="nav-link" href="#">Варианты обучения</a>
         </li>
-        <li class="nav-list-item">
-          <a class="nav-link" href="#methods">Варианты обучения</a>
-        </li>
-        <li class="nav-list-item">
-          <a class="nav-link" href="#contacts">Контакты</a>
-        </li>
+        <li class="nav-list-item"><a class="nav-link" href="#">Контакты</a></li>
       </ul>
     </nav>
-    <a class="menu-header-button" href="tel:+38(000)0000000 ">
-      консультация по телефону
-    </a>
+    <a class="menu-header-button" href="#"> консультация по телефону </a>
   </div>
 </header>
