--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -11,7 +11,7 @@
         гарантировано наберешь
         <span class="accent">+25 баллов</span>
       </p>
-      <button class="hero-button _anim-items" type="button" href="#contacts">
+      <button class="hero-button _anim-items" type="button">
         хочу на бесплатное занятие
       </button>
     </div>
