Revert "Відредагував scss"
This reverts commit 094d370c5de0d6ef4d99b8cb26572cbb55a7864b.

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -6,6 +6,9 @@
 
 .footer-wrapper {
   margin: 0 auto;
+}
+
+
 
   background-color: var(--title-text-color);
   background-image: url('../images/footer/bg-mobile.png');
