--- a/src/sass/layout/_description.scss
+++ b/src/sass/layout/_description.scss
@@ -1,4 +1,4 @@
-@media screen and(max-width:767px) {
+@media screen and(min-width:320px) and(max-width:767px) {
   .description {
     background: #ffffff;
     margin-bottom: 50px;
@@ -20,6 +20,8 @@
         font-size: 14px;
 
         line-height: 1.4;
+
+
 
         display: flex;
         align-items: center;
@@ -85,13 +87,19 @@
 
         font-size: 20px;
         line-height: 33px;
+    
+
 
         letter-spacing: 0.08em;
       }
     }
   }
   .description-svg {
+
     width: 100px;
     height: 102px;
+
+
+
   }
 }
