--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -16,10 +16,12 @@
   background-color: transparent;
 }
 
-@media screen and(max-width: 767px) {
+@media screen and(min-width:320px) and(max-width: 767px) {
   .menu-container {
     position: relative;
-    min-width: 280px;
+    min-width: 320px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
   .is-hidden {
     opacity: 0;
@@ -28,8 +30,9 @@
   }
 
   .menu-open {
+    padding-left: 20px;
     padding-top: 30px;
-
+    padding-right: 20px;
     background: rgba(17, 21, 24, 0.9);
     position: fixed;
     width: 100%;
@@ -125,9 +128,15 @@
     visibility: hidden;
     pointer-events: none;
   }
-
+  .menu-container {
+    min-width: 768px;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
   .menu-open {
     padding-top: 42px;
+    padding-right: 44px;
+    padding-left: 40px;
     background: rgba(17, 21, 24, 0.9);
     position: fixed;
     width: 100%;
