--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@
 // ==============UTILS=============
 @import './utils/hidden-title';
 @import './utils/variables';
+@import './utils/animation';
 // ==============LAYOUT============
 @import './layout/header';
 @import './layout/hero';
