--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="menu-close _anim-items container">
     <a href="#">
-      <svg class="mobile_logo _anim-items">
+      <svg class="mobile_logo">
         <use href="./images/sprite.svg#logo-desktop"></use>
       </svg>
     </a>
