--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="menu-close _anim-items container">
     <a href="#">
-      <svg class="mobile_logo">
+      <svg class="mobile_logo _anim-items">
         <use href="./images/sprite.svg#logo-desktop"></use>
       </svg>
     </a>
@@ -21,9 +21,7 @@
         </li>
       </ul>
     </nav>
-    <a class="header-button" href="tel:+38(000)0000000"
-      >консультация по телефону</a
-    >
+    <a class="header-button" href="#">консультация по телефону</a>
 
     <button class="nav-menu-btn" type="button" data-modal-open>
       <svg class="svg-button">
@@ -60,7 +58,7 @@
         </li>
       </ul>
     </nav>
-    <a class="menu-header-button" href="tel:+38(000)0000000">
+    <a class="menu-header-button" href="tel:+380000000000">
       консультация по телефону
     </a>
   </div>
