--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -21,4 +21,4 @@
 @import './layout/teacher';
 @import './layout/guarantee';
 @import './layout/footer';
-@import './utils/animation';
+@import './layout/animation';
